# python-polymarket-arbitrage

./: .gitignore  README.md  implementation.md  implementation_PROGRESS.md  main.py  plan.md  plan_PROGRESS.md  pyproject.toml
polyarb/: __init__.py  cli.py  models.py
polyarb/clients/: __init__.py  fred.py  polymarket_clob.py  polymarket_gamma.py  yfinance_md.py
polyarb/pricing/: __init__.py  digital_bs.py  touch_barrier.py
polyarb/report/: __init__.py  markdown_report.py
polyarb/util/: __init__.py  dates.py  fmt.py  math.py
polyarb/vol/: __init__.py  iv_extract.py  term_structure.py
tests/: test_cli_validation.py  test_clob_client.py  test_fred_client.py  test_gamma_client.py  test_iv_extract.py  test_pricing_digital.py  test_pricing_touch.py  test_report_sections.py  test_term_structure.py  test_yfinance_md.py
